--- a/package.json
+++ b/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "easywatch",
   "version": "0.0.0",
@@ -10,10 +11,12 @@
   "dependencies": {
     "@popperjs/core": "^2.11.6",
     "axios": "^1.1.3",
-    "bootstrap-vue": "^2.22.0",
+    "bootstrap": "^5.2.2",
     "chart.js": "^3.9.1",
     "vue": "^3.2.41",
+    "vue-axios": "^3.5.2",
     "vue-chart-3": "^3.1.8",
+    "vue-chartjs": "^4.1.2",
     "vue-router": "^4.1.6"
   },
   "devDependencies": {
